Closed Bug 622961 Opened 14 years ago Closed 14 years ago

fix webgl getparam/getuniform test

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

We need to return an array of booleans for bool uniforms, and return null instead of undefined for some getparameter bits.  (SetAsEmpty vs. SetAsVoid)
Attachment #501129 - Flags: review?(bjacob)
Attachment #501129 - Flags: review?(bjacob) → review+
http://hg.mozilla.org/mozilla-central/rev/c1ce4b06afeb
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: