b=622961; [webgl] fix getparam/getuniform test; r=bjacob